--- a/en/meta.yml
+++ b/en/meta.yml
@@ -6,7 +6,8 @@ theme: cc-prototype
 duration: 1 # 1, 2 or 3
 listed: false
 ingredient: true
-interests: "jokes/pranks, sports, art/design, photography, games, outside/weather/nature, space, animals, music/sound"
-technologies: "python"
+copyedit: false
+interests: ""
+technologies: "python, sense hat"
 steps:
   - title: Step one
